AWS-Ingress-ALB/all_context-ingress-alb_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nab-dev
  name: ingress-nabstract-context
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:342133377929:certificate/4915a06e-5444-4572-b927-e66b763d9560
    alb.ingress.kubernetes.io/group.name: "niop"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    alb.ingress.kubernetes.io/subnets: subnet-05505793517ff39db,subnet-0805b9b07ef7c9718,subnet-04748a88b586f829c
    alb.ingress.kubernetes.io/success-codes: 200-400
  
spec:
  ingressClassName: alb
  rules:
    - host: context.nabstract.io
      http:
        paths:
        - path: /cc/platform-configuration-service
          pathType: Prefix
          backend:
            service:
              name: platform-configuration-service
              port:
                number: 9080
        - path: /dvc/device-registry-service
          pathType: Prefix
          backend:
            service:
              name: device-registry-service
              port:
                number: 9083
        - path: /apc/application-partner-service
          pathType: Prefix
          backend:
            service:
              name: application-partner-service
              port:
                number: 9081
        - path: /mzc/monetization-service
          pathType: Prefix
          backend:
            service:
              name: monetization-service
              port:
                number: 8083
        - path: /oc/operator-service
          pathType: Prefix
          backend:
            service:
              name: operator-service 
              port:
                number: 9084
